--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#37474f</color>
+    <color name="colorPrimaryDark">#102027</color>
+    <color name="colorAccent">#ffa000</color>
+
+    <color name="colorPrimaryLight">#f5f5f5</color>
+
+    <color name="colorBlue">#1e88e5</color>
+    <color name="colorBlue2">#2962ff</color>
+    <color name="colorYellow">#f9a825</color>
+    <color name="colorGreen">#7cb342</color>
+
+    <color name="textCard">#232F34</color>
+
+    <color name="priority">#B71C1C</color>
 </resources>
