--- a/app/src/main/res/layout/task_item.xml
+++ b/app/src/main/res/layout/task_item.xml
@@ -23,7 +23,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@{task.state == 2 ? @color/colorPrimary : 0}">
+            android:background="@{task.state == 2 ? @color/colorCardFinished : 0}">
 
             <View
                 android:id="@+id/priority"
@@ -56,7 +56,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/text_header" />
 
             <TextView
-                android:id="@+id/user_name"
+                android:id="@+id/assignee_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
@@ -75,7 +75,7 @@
                 style="@style/CardDescription"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="20dp"
-                app:layout_constraintEnd_toStartOf="@id/user_name"
+                app:layout_constraintEnd_toStartOf="@id/assignee_name"
                 app:layout_constraintStart_toStartOf="@+id/text_header"
                 app:layout_constraintTop_toBottomOf="@+id/info_text"/>
 
@@ -89,7 +89,7 @@
                 app:layout_constraintTop_toBottomOf="@id/description_text"/>
 
             <TextView
-                android:id="@+id/button1"
+                android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/CardButtonSmall"
