--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
 
     <color name="colorPrimaryLight">#f5f5f5</color>
 
+    <color name="colorCardFinished">#ABABAB</color>
+
     <color name="colorBlue">#1e88e5</color>
     <color name="colorBlue2">#2962ff</color>
     <color name="colorYellow">#f9a825</color>
