--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/save_task"
-        android:icon="@drawable/ic_save_white"
+    <item android:id="@+id/add_people"
+        android:icon="@drawable/ic_add_person_white"
         app:showAsAction="always"
-        android:title="@string/save_task" />
+        android:title="@string/invite_people" />
 </menu>
