--- a/app/src/main/res/layout/task_detail_fragment.xml
+++ b/app/src/main/res/layout/task_detail_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -88,6 +88,6 @@
                 app:layout_constraintStart_toStartOf="@id/task_description_et"
                 app:layout_constraintTop_toBottomOf="@id/priority" />
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
